src/Base/Sylvester.Bindings/plaidml/plaidml.h

struct plaidml_device_enumerator;
typedef struct plaidml_device_enumerator plaidml_device_enumerator;
// Allocates a device enumerator and initializes it using automatic configuration.
//
// If the supplied callback is NULL, the call will block until the enumerator
// is fully initialized, and then will return a pointer to the enumerator
// (unless an error occurs).
//
// If the supplied callback is non-NULL, the call will immediately return NULL,
// and will arrange for the callback to be invoked with the enumerator once the
// enumerator becomes available (calling it with a NULL enumerator on error).  The
// library guarantees to invoke the callback exactly once.
//
// If the library returns an enumerator, there will be at least one
// configured device available; otherwise, the call will fail with
// VAI_STATUS_NOT_FOUND.
//
// The library may invoke the callback synchronously if the enumerator is
// immediately available or in error conditions.
PLAIDML_API plaidml_device_enumerator* plaidml_alloc_device_enumerator(
    vai_ctx* ctx, void (*callback)(void* arg, plaidml_device_enumerator* enumerator), void* arg);
// Allocates a device enumerator and initializes it using the supplied
// configuration. Otherwise identical to the version that uses system
// config.
PLAIDML_API plaidml_device_enumerator* plaidml_alloc_device_enumerator_with_config(
    vai_ctx* ctx, const char* configuration, void (*callback)(void* arg, plaidml_device_enumerator* enumerator),
    void* arg);
struct plaidml_buffer;
typedef struct plaidml_buffer plaidml_buffer;
struct plaidml_mapping;
typedef struct plaidml_mapping plaidml_mapping;
// Maps a buffer's current contents into memory.
//
// If the supplied callback is NULL, the call will block until the buffer is
// available, and then will return a pointer to a mapping for the buffer
// (unless an error occurs).
//
// If the supplied callback is non-NULL, the call will immediately return NULL,
// and will arrange for the callback to be invoked with the mapping once the
// buffer's data becomes available (calling it with a NULL mapping on error).
//
// The library may invoke the callback synchronously if the buffer's data is
// already available or in error conditions.
//
// A NULL buffer may be supplied; this will always result in a NULL address,
// and an out-of-memory error in the current thread's thread-local storage.
PLAIDML_API plaidml_mapping* plaidml_map_buffer_current(plaidml_buffer* buffer,
                                                        void (*callback)(void* arg, plaidml_mapping* mapping),
                                                        void* arg);
struct plaidml_shape;
typedef struct plaidml_shape plaidml_shape;
struct plaidml_function;
typedef struct plaidml_function plaidml_function;
struct plaidml_var;
typedef struct plaidml_var plaidml_var;
struct plaidml_applier;
typedef struct plaidml_applier plaidml_applier;
// Adds a dependency to the applied function.  This is used to sequence tensor
// updates: if a sub-function of the applied function uses a mutable tensor as
// an input, the value it will observe for that tensor will be the value after
// the indicated function has run (presumably updating the tensor).  In addition
// the new function application will carry the updates forward.
PLAIDML_API bool plaidml_apply_add_dependency(plaidml_applier* applier, plaidml_applier* must_run_before);
// Adds a named input to a function application.  Note that the input variable
// is not consumed; the caller remains responsible for calling plaidml_free_var()
// when the supplied var is no longer needed.
PLAIDML_API bool plaidml_apply_add_input(plaidml_applier* applier, const char* name, plaidml_var* var);
// Allocates a var corresponding to the output of a function application.  The
// caller is responsible for calling plaidml_free_var() on the result when the
// variable is no longer needed.
//
// At the time when the output is allocated, all inputs to the function
// application must already be added (either as concrete values or as
// placeholders).
PLAIDML_API plaidml_var* plaidml_apply_alloc_output(plaidml_applier* applier, const char* name);
// Frees an applier.  After this call, the applier should not be used for any
// subsequent calls.  Freeing a NULL applier is a no-op.
PLAIDML_API void plaidml_free_applier(plaidml_applier* applier);
struct plaidml_invoker;
typedef struct plaidml_invoker plaidml_invoker;
// Allocates an invoker for the supplied function, or returns NULL if
// the library cannot allocate sufficient memory, or if the supplied
// context or function is NULL.
PLAIDML_API plaidml_invoker* plaidml_alloc_invoker(vai_ctx* ctx, plaidml_function* function);
// Frees an invoker.  After this call, the invoker should not be used for any
// subsequent calls.  Freeing a NULL invoker is a no-op.
PLAIDML_API void plaidml_free_invoker(plaidml_invoker* invoker);
// Sets a named input for an invocation.  The variable must be NULL or
// a concrete object; placeholders are not permitted.  Note that the
// input variable is not consumed; the caller remains responsible for
// calling plaidml_free_var() when the supplied var is no longer
// needed.
PLAIDML_API bool plaidml_set_invoker_input(plaidml_invoker* invoker, const char* name, plaidml_var* var);
// Allocates a shape corresponding to the output of an invocation.
// The caller is responsible for calling plaidml_free_shape() on the
// result when the shape is no longer needed.
//
// At the time when the shape is allocated, all inputs to the
// invocation must already be set to concrete values that are
// consistent in size.
PLAIDML_API plaidml_shape* plaidml_alloc_invoker_output_shape(plaidml_invoker* invoker, const char* name);
// Sets a named output for an invocation.  The variable must be NULL
// or a concrete tensor; placeholders are not permitted.  Note that
// the output variable is not consumed; the caller remains responsible
// for calling plaidml_free_var() when the supplied var is no longer
// needed.
PLAIDML_API bool plaidml_set_invoker_output(plaidml_invoker* invoker, const char* name, plaidml_var* var);
struct plaidml_invocation;
typedef struct plaidml_invocation plaidml_invocation;
// Schedules a run of an invoker's function with the invoker's current
// input and output bindings.
//
// The invocation must be fully specified: all function inputs and
// outputs must have corresponding inputs and outputs set in the
// invoker.  Furthermore, all inputs and outputs must be consistently
// sized relative to each other and the function.
//
// All buffers used to back tensors that will be updated by the
// invocation should already be unmapped.  When this call returns,
// those buffers logically contain the updated values, and may be
// remapped; remapping requests will complete once the underlying
// invocation is complete.
//
// Note that this call may return before the computation described by
// the function has actually completed; the computation is scheduled,
// not complete.  Errors that occur asynchronously will be reported
// when the buffers updated by running the function are remapped.
//
// Once this call returns, the invoker's inputs and outputs may be set
// by the caller, and the invoker may be used for another run of the
// invoker's function, even if the first run has not yet completed.
PLAIDML_API plaidml_invocation* plaidml_schedule_invocation(vai_ctx* ctx, plaidml_invoker* invoker);
// Frees an invocation.  After this call, the invocation should not be
// used for any subsequent calls.  Freeing a NULL invocation is a no-op.
PLAIDML_API void plaidml_free_invocation(plaidml_invocation* invocation);
struct plaidml_gradient;
typedef struct plaidml_gradient plaidml_gradient;
// Allocate and returns a gradient computer for a given scalar or NULL if error
PLAIDML_API plaidml_gradient* plaidml_alloc_gradient(plaidml_var* var);
// Frees a gradient computer.  After this call, the context should not be used for
// any subsequent calls.  Freeing a NULL context is a no-op.
PLAIDML_API void plaidml_free_gradient(plaidml_gradient* grad);
// Determines the gradient of with respect to some value
PLAIDML_API plaidml_var* plaidml_compute_grad_wrt(plaidml_gradient* grad, plaidml_var* wrt);