Sylvester.Compiler.PlaidML/Bindings.cs


            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_apply_add_dependency")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool PlaidmlApplyAddDependency(global::System.IntPtr applier, global::System.IntPtr must_run_before);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_apply_add_input")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool PlaidmlApplyAddInput(global::System.IntPtr applier, [MarshalAs(UnmanagedType.LPStr)] string name, global::System.IntPtr var);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_apply_alloc_output")]
            internal static extern global::System.IntPtr PlaidmlApplyAllocOutput(global::System.IntPtr applier, [MarshalAs(UnmanagedType.LPStr)] string name);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_free_applier")]
            internal static extern void PlaidmlFreeApplier(global::System.IntPtr applier);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_alloc_invoker")]
            internal static extern global::System.IntPtr PlaidmlAllocInvoker(global::System.IntPtr ctx, global::System.IntPtr function);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_free_invoker")]
            internal static extern void PlaidmlFreeInvoker(global::System.IntPtr invoker);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_set_invoker_input")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool PlaidmlSetInvokerInput(global::System.IntPtr invoker, [MarshalAs(UnmanagedType.LPStr)] string name, global::System.IntPtr var);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_alloc_invoker_output_shape")]
            internal static extern global::System.IntPtr PlaidmlAllocInvokerOutputShape(global::System.IntPtr invoker, [MarshalAs(UnmanagedType.LPStr)] string name);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_set_invoker_output")]
            [return: MarshalAs(UnmanagedType.I1)]
            internal static extern bool PlaidmlSetInvokerOutput(global::System.IntPtr invoker, [MarshalAs(UnmanagedType.LPStr)] string name, global::System.IntPtr var);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_schedule_invocation")]
            internal static extern global::System.IntPtr PlaidmlScheduleInvocation(global::System.IntPtr ctx, global::System.IntPtr invoker);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_free_invocation")]
            internal static extern void PlaidmlFreeInvocation(global::System.IntPtr invocation);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_alloc_gradient")]
            internal static extern global::System.IntPtr PlaidmlAllocGradient(global::System.IntPtr var);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_free_gradient")]
            internal static extern void PlaidmlFreeGradient(global::System.IntPtr grad);

            [SuppressUnmanagedCodeSecurity]
            [DllImport("plaidml", CallingConvention = global::System.Runtime.InteropServices.CallingConvention.Cdecl,
                EntryPoint="plaidml_compute_grad_wrt")]
            internal static extern global::System.IntPtr PlaidmlComputeGradWrt(global::System.IntPtr grad, global::System.IntPtr wrt);
        }

        public static string PlaidmlGetVersion()
        {
            var __ret = __Internal.PlaidmlGetVersion();
            return Marshal.PtrToStringAnsi(__ret);
        }

        public static bool PlaidmlQueryDevconf(global::Sylvester.Compiler.PlaidML.Bindings.VaiCtx ctx, global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDevconf devconf, global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDeviceProperty property, global::System.IntPtr output_buffer, ulong output_buffer_size, ref ulong output_buffer_size_required)
        {
            var ____arg0 = ctx.__Instance;
            var __arg0 = new global::System.IntPtr(&____arg0);
            var ____arg1 = devconf.__Instance;
            var __arg1 = new global::System.IntPtr(&____arg1);
            fixed (ulong* __refParamPtr5 = &output_buffer_size_required)
            {
                var __arg5 = __refParamPtr5;
                var __ret = __Internal.PlaidmlQueryDevconf(__arg0, __arg1, property, output_buffer, output_buffer_size, __arg5);
                return __ret;
            }
        }

        public static global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDevice PlaidmlOpenDevice(global::Sylvester.Compiler.PlaidML.Bindings.VaiCtx ctx, global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDevconf devconf)
        {
            var ____arg0 = ctx.__Instance;
            var __arg0 = new global::System.IntPtr(&____arg0);
            var ____arg1 = devconf.__Instance;
            var __arg1 = new global::System.IntPtr(&____arg1);
            var __ret = __Internal.PlaidmlOpenDevice(__arg0, __arg1);
            global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDevice __result0;
            if (__ret == IntPtr.Zero) __result0 = new global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDevice();
            else __result0 = global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDevice.__CreateInstance(__ret);
            return __result0;
        }

        public static void PlaidmlCloseDevice(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDevice device)
        {
            var ____arg0 = device.__Instance;
            var __arg0 = new global::System.IntPtr(&____arg0);
            __Internal.PlaidmlCloseDevice(__arg0);
        }

        public static global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDeviceEnumerator PlaidmlAllocDeviceEnumerator(global::Sylvester.Compiler.PlaidML.Bindings.VaiCtx ctx, global::Sylvester.Compiler.PlaidML.Bindings.Delegates.Action_IntPtr_IntPtr callback, global::System.IntPtr arg)
        {
            var ____arg0 = ctx.__Instance;
            var __arg0 = new global::System.IntPtr(&____arg0);
            var __arg1 = callback == null ? global::System.IntPtr.Zero : Marshal.GetFunctionPointerForDelegate(callback);
            var __ret = __Internal.PlaidmlAllocDeviceEnumerator(__arg0, __arg1, arg);
            global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDeviceEnumerator __result0;
            if (__ret == IntPtr.Zero) __result0 = new global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDeviceEnumerator();
            else __result0 = global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDeviceEnumerator.__CreateInstance(__ret);
            return __result0;
        }

        public static global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDeviceEnumerator PlaidmlAllocDeviceEnumeratorWithConfig(global::Sylvester.Compiler.PlaidML.Bindings.VaiCtx ctx, string configuration, global::Sylvester.Compiler.PlaidML.Bindings.Delegates.Action_IntPtr_IntPtr callback, global::System.IntPtr arg)
        {
            var ____arg0 = ctx.__Instance;
            var __arg0 = new global::System.IntPtr(&____arg0);
            var __arg2 = callback == null ? global::System.IntPtr.Zero : Marshal.GetFunctionPointerForDelegate(callback);
            var __ret = __Internal.PlaidmlAllocDeviceEnumeratorWithConfig(__arg0, configuration, __arg2, arg);
            global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDeviceEnumerator __result0;
            if (__ret == IntPtr.Zero) __result0 = new global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDeviceEnumerator();
            else __result0 = global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDeviceEnumerator.__CreateInstance(__ret);
            return __result0;
        }

        public static void PlaidmlFreeDeviceEnumerator(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDeviceEnumerator enumerator)
        {
            var ____arg0 = enumerator.__Instance;
            var __arg0 = new global::System.IntPtr(&____arg0);
            __Internal.PlaidmlFreeDeviceEnumerator(__arg0);
        }

        public static string PlaidmlGetEnumeratorConfigSource(global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDeviceEnumerator enumerator)
        {
            var ____arg0 = enumerator.__Instance;
            var __arg0 = new global::System.IntPtr(&____arg0);
            var __ret = __Internal.PlaidmlGetEnumeratorConfigSource(__arg0);
            return Marshal.PtrToStringAnsi(__ret);
        }

        public static ulong PlaidmlGetDevconfCount(global::Sylvester.Compiler.PlaidML.Bindings.VaiCtx ctx, global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDeviceEnumerator enumerator, bool valid_devices)
        {
            var ____arg0 = ctx.__Instance;
            var __arg0 = new global::System.IntPtr(&____arg0);
            var ____arg1 = enumerator.__Instance;
            var __arg1 = new global::System.IntPtr(&____arg1);
            var __ret = __Internal.PlaidmlGetDevconfCount(__arg0, __arg1, valid_devices);
            return __ret;
        }

        public static global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDevconf PlaidmlGetDevconf(global::Sylvester.Compiler.PlaidML.Bindings.VaiCtx ctx, global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDeviceEnumerator enumerator, ulong index)
        {
            var ____arg0 = ctx.__Instance;
            var __arg0 = new global::System.IntPtr(&____arg0);
            var ____arg1 = enumerator.__Instance;
            var __arg1 = new global::System.IntPtr(&____arg1);
            var __ret = __Internal.PlaidmlGetDevconf(__arg0, __arg1, index);
            global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDevconf __result0;
            if (__ret == IntPtr.Zero) __result0 = new global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDevconf();
            else __result0 = global::Sylvester.Compiler.PlaidML.Bindings.PlaidmlDevconf.__CreateInstance(__ret);
            return __result0;
        }
